fixed alignement

--- a/style/style.css
+++ b/style/style.css
@@ -463,6 +463,7 @@ ul {
 }
 
 .timeline:before {
+    height: 100%;
     position: absolute;
     top: 0;
     bottom: 168px;
@@ -559,9 +560,9 @@ ul {
     margin-bottom: 0;
 }
 
-.timeline>.timeline-panel p.lead {
-    text-align: end;
-}
+/* .timeline>.timeline-panel p.lead {
+    text-align: left;
+} */
 
 ul.lead {
     list-style: circle;
@@ -636,6 +637,10 @@ h4.sub-title {
         float: right;
         padding: 0 30px 20px 20px;
         text-align: left;
+    }
+    
+    .timeline>.timeline-panel p.lead{
+        text-align: right;
     }
 }
 
